# checksum_helper

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  build_singe_folder_dist.bat  checksum_helper.py  checksum_helper.spec  pyproject.toml  setup.py  todo.txt
checksum_helper/: __main__.py  checksum_helper.py
tests/: conftest.py  fix_pathsep.py  test_build_most_current.py  test_check_missing.py  test_cshd.py  test_incremental.py  test_mixed.py  test_modify_files.py  test_verify.py  test_wildcard_matching.py  tests_mtimes.txt  utils.py
tests/test_abspath_warn_files/: crash.sha512
tests/test_build_most_current_files/: most_current.cshd  most_current_2018-04-24.sha512  most_current_fd.cshd  most_current_fd.sha512  most_current_md5_filtered.cshd  most_current_md5_filtered.sha512  pre-existing.cshd
tests/test_build_most_current_files/normalized/: tt.md5  tt.sha512
tests/test_build_most_current_files/tt/: new 3.md5  tt.sha512
tests/test_check_missing_files/: compl.sha512  missing.sha512
tests/test_copyto_files/tt/: tt.sha512
tests/test_incremental_files/: tt_2018-04-22_inc.sha512  tt_2018-04-22_inc_full.sha512  with_cshd_collect.cshd  with_cshd_full.cshd  with_cshd_skip.cshd  wl_bl_no-desk-log-thumbs_only-txt-jpg.sha512  wl_bl_no-desk-log-thumbs_only-txt-jpg_wo-pre.sha512  wl_bl_no-txt.sha512  wl_bl_only-jpg.sha512  wl_bl_wo-pre.sha512
tests/test_incremental_files/per_dir_results/: sub1.sha512  sub2.sha512  sub3.sha512  sub4.sha512
tests/test_incremental_files/tt/: tt2.sha512
tests/test_modify_files/: tt.md5  tt.sha256  tt.sha512  tt_sub3_sub1.sha512
(+88 files in other folders)
